--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   },
   "dependencies": {
     "axios": "^1.6.8",
+    "i": "^0.3.7",
     "next": "14.2.2",
+    "npm": "^10.7.0",
     "openai": "^4.38.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "yarn": "^1.22.22"
   },
   "devDependencies": {
     "@types/node": "^20",
